--- a/work/jubilee-austen.html
+++ b/work/jubilee-austen.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Work - Hanis</title>
+    <title>Jubilee Austen - Work Detail</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -43,7 +43,7 @@
       </p>
     <![endif]-->
 
-    <!-- HEADER - WORK -->
+    <!-- HEADER - WORK DETAIL -->
     <header>
       <div class="content-wrapper-header">
         <!-- NAVIGATION LINKS hidden by default-->
@@ -62,56 +62,33 @@
       </a>
     </header>
 
-    <!-- MAIN - WORK -->
+    <!-- MAIN - WORK DETAIL -->
     <main>
-      <section class="work">
+      <section class="work-detail">
         <div class="content-wrapper">
-          <h1>Work</h1>
-          <div class="featured-work">
-            <a href="jubilee-austen.html">
-              <article>
-                <img src="../img/rect.png" alt="desc" />
-                <div class="project-text">
-                  <h3>Project title</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
-                  </p>
-                </div>
-              </article>
-            </a>
-
-            <a href="jubilee-austen.html">
-              <article>
-                <img src="../img/rect.png" alt="desc" />
-                <div class="project-text">
-                  <h3>Project title</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
-                  </p>
-                </div>
-              </article>
-            </a>
-
-            <a href="jubilee-austen.html">
-              <article>
-                <img src="../img/rect.png" alt="desc" />
-                <div class="project-text">
-                  <h3>Project title</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
-                  </p>
-                </div>
-              </article>
-            </a>
+          <h1>Jubilee Austen</h1>
+          <img src="../img/rect.png" alt="Work image" />
+          <div class="work-detail-text">
+            <article>
+              <h3>Description</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+                quasi dicta, illum cum praesentium, quia laboriosam repudiandae
+                necessitatibus perspiciatis.
+              </p>
+            </article>
+            <article>
+              <h3>Tech</h3>
+              <span>HTML</span>
+              <span>CSS</span>
+            </article>
+            <article>
+              <a href="#" class="button">Live Preview</a>
+            </article>
+          </div>
+          <div class="pagination">
+            <a href="#" class="button">Previous</a>
+            <a href="#" class="button">Next</a>
           </div>
         </div>
       </section>
@@ -124,9 +101,9 @@
           <!-- NAVIGATION -->
           <nav class="footer-navigation">
             <ul>
-              <li><a href="../contact/index.html">Contact</a></li>
-              <li><a href="../about/index.html">About</a></li>
-              <li><a href="../work/index.html">Work</a></li>
+              <li><a href="contact/index.html">Contact</a></li>
+              <li><a href="work/index.html">Work</a></li>
+              <li><a href="about/index.html">About</a></li>
               <li><a href="#">Resume</a></li>
             </ul>
           </nav>
