--- a/index.html
+++ b/index.html
@@ -77,44 +77,48 @@
         <div class="content-wrapper">
           <h1>Work</h1>
           <div class="featured-work">
-            <article>
-              <img src="img/rect.png" alt="desc" />
-              <div class="project-text">
-                <h3>Project title</h3>
-                <span>HTML</span>
-                <span>CSS</span>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
-                </p>
-              </div>
-            </article>
-
-            <article>
-              <img src="img/rect.png" alt="desc" />
-              <div class="project-text">
-                <h3>Project title</h3>
-                <span>HTML</span>
-                <span>CSS</span>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
-                </p>
-              </div>
-            </article>
-
-            <article>
-              <img src="img/rect.png" alt="desc" />
-              <div class="project-text">
-                <h3>Project title</h3>
-                <span>HTML</span>
-                <span>CSS</span>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
-                </p>
-              </div>
-            </article>
+            <a href="work/jubilee-austen.html">
+              <article>
+                <img src="img/rect.png" alt="desc" />
+                <div class="project-text">
+                  <h3>Project title</h3>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="work/jubilee-austen.html">
+              <article>
+                <img src="img/rect.png" alt="desc" />
+                <div class="project-text">
+                  <h3>Project title</h3>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="work/jubilee-austen.html">
+              <article>
+                <img src="img/rect.png" alt="desc" />
+                <div class="project-text">
+                  <h3>Project title</h3>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                  </p>
+                </div>
+              </article>
+            </a>
           </div>
           <a href="#work" class="button">View more</a>
         </div>
