Style about page

--- a/about/index.html
+++ b/about/index.html
@@ -65,10 +65,13 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsum
             commodi odio magni minus maxime, nemo iste unde reprehenderit aut
             excepturi, aliquam sequi dolor eaque quo deleniti esse? Doloribus,
-            ut.<br />Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Laudantium officia pariatur temporibus expedita voluptates libero
-            debitis amet facilis, ut rem labore, necessitatibus voluptatem
-            quaerat ea beatae ab doloribus! Voluptas, reiciendis.
+            ut.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium
+            officia pariatur temporibus expedita voluptates libero debitis amet
+            facilis, ut rem labore, necessitatibus voluptatem quaerat ea beatae
+            ab doloribus! Voluptas, reiciendis.
           </p>
           <img src="../img/2.png" alt="A picture of me" />
         </div>
