--- a/contact/index.html
+++ b/contact/index.html
@@ -60,24 +60,24 @@
     <main>
       <section class="contact">
         <div class="content-wrapper">
-          <h1>Say hi</h1>
+          <h1>Say hello</h1>
           <div class="contact-info">
             <div class="contact-info-sub" id="email-address">
-              <h3>Drop me an email</h3>
+              <h3>Send me an email</h3>
               <a href="mailto:hanisno@outlook.com">hanisno@outlook.com</a>
             </div>
             <div class="contact-info-sub" id="phone-number">
-              <h3>Wanna talk instead?</h3>
+              <h3>Feel like talking?</h3>
               <a href="tel:+601165522126">+601165522126</a>
             </div>
           </div>
           <div class="contact-form">
             <form action="action_page.php">
-              <label for="name">Name</label>
+              <!--<label for="name">Name</label>-->
               <input type="text" id="name" placeholder="Your name" />
-              <label for="email">Email</label>
+              <!--<label for="email">Email</label>-->
               <input type="email" id="email" placeholder="Your email" />
-              <label for="subject">Subject</label>
+              <!--<label for="subject">Subject</label>-->
               <textarea
                 id="subject"
                 name="subject"
