Style work detail page

--- a/contact/index.html
+++ b/contact/index.html
@@ -62,11 +62,11 @@
         <div class="content-wrapper">
           <h1>Say hello</h1>
           <div class="contact-info">
-            <div class="contact-info-sub" id="email-address">
+            <div class="info-sub" id="email-address">
               <h3>Send me an email</h3>
               <a href="mailto:hanisno@outlook.com">hanisno@outlook.com</a>
             </div>
-            <div class="contact-info-sub" id="phone-number">
+            <div class="info-sub" id="phone-number">
               <h3>Feel like talking?</h3>
               <a href="tel:+601165522126">+601165522126</a>
             </div>
