--- a/work/jubilee-austen.html
+++ b/work/jubilee-austen.html
@@ -69,26 +69,30 @@
           <h1>Jubilee Austen</h1>
           <img src="../img/rect.png" alt="Work image" />
           <div class="work-detail-text">
-            <article>
+            <div class="info-sub">
               <h3>Description</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
                 quasi dicta, illum cum praesentium, quia laboriosam repudiandae
                 necessitatibus perspiciatis.
               </p>
-            </article>
-            <article>
+            </div>
+            <div class="info-sub">
               <h3>Tech</h3>
               <span>HTML</span>
               <span>CSS</span>
-            </article>
-            <article>
-              <a href="#" class="button">Live Preview</a>
-            </article>
+            </div>
+            <div class="info-sub">
+              <div class="button-container">
+                <a href="#" class="button">Live Preview</a>
+              </div>
+            </div>
           </div>
           <div class="pagination">
-            <a href="#" class="button">Previous</a>
-            <a href="#" class="button">Next</a>
+            <div class="button-container">
+              <a href="#" class="button"><</a>
+              <a href="#" class="button">></a>
+            </div>
           </div>
         </div>
       </section>
