Initialize responsive styling

--- a/index.html
+++ b/index.html
@@ -79,42 +79,48 @@
           <div class="featured-work">
             <a href="work/jubilee-austen.html">
               <article>
-                <img src="img/rect.png" alt="desc" />
+                <img src="img/template.png" alt="desc" />
                 <div class="project-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Voluptatem laborum iusto totam consectetur molestias
+                    aspernatur id possimus nesciunt facilis, rerum dignissimos
+                    sint officiis deserunt magnam. Facilis totam quo eum dolor!
                   </p>
                 </div>
               </article>
             </a>
             <a href="work/jubilee-austen.html">
               <article>
-                <img src="img/rect.png" alt="desc" />
+                <img src="img/template.png" alt="desc" />
                 <div class="project-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Facere illo in quod, consequatur unde sit? Sint deserunt
+                    exercitationem quaerat inventore, architecto in, fugiat,
+                    autem perferendis sapiente iure nulla vero veritatis.
                   </p>
                 </div>
               </article>
             </a>
             <a href="work/jubilee-austen.html">
               <article>
-                <img src="img/rect.png" alt="desc" />
+                <img src="img/template.png" alt="desc" />
                 <div class="project-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Provident commodi consectetur quam aperiam vero sit impedit
+                    quia? Ea corrupti, dolores aut dicta nihil dolorem
+                    explicabo, odit officiis praesentium omnis voluptate.
                   </p>
                 </div>
               </article>
@@ -131,29 +137,35 @@
           <div class="featured-skills">
             <article>
               <img src="img/rect.png" alt="desc" />
-              <h4>Skill title</h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
-                itaque inventore ipsum dolore eius deserunt aperiam.
-              </p>
+              <div class="skill-text">
+                <h4>Skill title</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                </p>
+              </div>
             </article>
 
             <article>
               <img src="img/rect.png" alt="desc" />
-              <h4>Skill title</h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
-                itaque inventore ipsum dolore eius deserunt aperiam.
-              </p>
+              <div class="skill-text">
+                <h4>Skill title</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                </p>
+              </div>
             </article>
 
             <article>
               <img src="img/rect.png" alt="desc" />
-              <h4>Skill title</h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
-                itaque inventore ipsum dolore eius deserunt aperiam.
-              </p>
+              <div class="skill-text">
+                <h4>Skill title</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                </p>
+              </div>
             </article>
           </div>
         </div>
@@ -161,14 +173,17 @@
 
       <!-- CALL TO ACTION-->
       <section class="call-to-action">
-        <div class="content-wrapper">
-          <h1>Call to action</h1>
-          <p>
-            Send me questions at
-            <a href="mailto:hanisno@outlook.com">hanisno@outlook.com</a>, check
-            out <a href="contact/index.html">other ways you can reach me</a> or
-            learn more <a href="about/index.html">about who I am</a>.
-          </p>
+        <div class="rounded-square-container">
+          <div class="content-wrapper">
+            <h1>Call to action</h1>
+            <p>
+              Send me questions at
+              <a href="mailto:hanisno@outlook.com">hanisno@outlook.com</a>,
+              check out
+              <a href="contact/index.html">other ways you can reach me</a> or
+              learn more <a href="about/index.html">about who I am</a>.
+            </p>
+          </div>
         </div>
       </section>
     </main>
