Sytle main page with mobile styles

--- a/index.html
+++ b/index.html
@@ -65,22 +65,24 @@
     <main>
       <!-- HERO -->
       <section class="hero">
-        <div class="content-wrapper">
-          <h1>Hanis</h1>
-          <h2>Creating beautiful websites</h2>
-          <a href="#work" class="button">View work</a>
+        <div class="wrapper-container">
+          <div class="content-wrapper">
+            <h1>Hanis</h1>
+            <h2>Creating beautiful websites</h2>
+            <a href="#work" class="button">View work</a>
+          </div>
         </div>
       </section>
 
       <!-- WORK -->
       <section class="work">
-        <div class="content-wrapper">
+        <div class="wrapper-container">
           <h1>Work</h1>
-          <div class="featured-work">
+          <div class="content-wrapper">
             <a href="work/jubilee-austen.html">
               <article>
                 <img src="img/template.png" alt="desc" />
-                <div class="project-text">
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -96,7 +98,7 @@
             <a href="work/jubilee-austen.html">
               <article>
                 <img src="img/template.png" alt="desc" />
-                <div class="project-text">
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -112,7 +114,7 @@
             <a href="work/jubilee-austen.html">
               <article>
                 <img src="img/template.png" alt="desc" />
-                <div class="project-text">
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -125,19 +127,19 @@
                 </div>
               </article>
             </a>
+            <a href="#work" class="button">View more</a>
           </div>
-          <a href="#work" class="button">View more</a>
         </div>
       </section>
 
       <!-- WHAT I DO -->
-      <section class="what-i-do">
-        <div class="content-wrapper">
+      <section class="skills">
+        <div class="wrapper-container">
           <h1>What I do</h1>
-          <div class="featured-skills">
+          <div class="content-wrapper">
             <article>
-              <img src="img/rect.png" alt="desc" />
-              <div class="skill-text">
+              <i class="fas fa-paint-brush"></i>
+              <div class="skills-text">
                 <h4>Skill title</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -147,8 +149,8 @@
             </article>
 
             <article>
-              <img src="img/rect.png" alt="desc" />
-              <div class="skill-text">
+              <i class="fas fa-code"></i>
+              <div class="skills-text">
                 <h4>Skill title</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -158,8 +160,8 @@
             </article>
 
             <article>
-              <img src="img/rect.png" alt="desc" />
-              <div class="skill-text">
+              <i class="fas fa-search"></i>
+              <div class="skills-text">
                 <h4>Skill title</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -190,7 +192,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <div class="content-wrapper">
+      <div class="wrapper-container">
         <div class="footer-content">
           <!-- NAVIGATION -->
           <nav class="footer-navigation">
