Style main page with desktop styles

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </article>
             </a>
             <a href="work/jubilee-austen.html">
-              <article>
+              <article id="article-b">
                 <img src="img/template.png" alt="desc" />
                 <div class="work-text">
                   <h3>Project title</h3>
