Style about page with tablet and desktop styles

--- a/about/index.html
+++ b/about/index.html
@@ -59,21 +59,27 @@
     <!-- MAIN - ABOUT -->
     <main>
       <section class="about">
-        <div class="content-wrapper">
-          <h1>I'm Hanis</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsum
-            commodi odio magni minus maxime, nemo iste unde reprehenderit aut
-            excepturi, aliquam sequi dolor eaque quo deleniti esse? Doloribus,
-            ut.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium
-            officia pariatur temporibus expedita voluptates libero debitis amet
-            facilis, ut rem labore, necessitatibus voluptatem quaerat ea beatae
-            ab doloribus! Voluptas, reiciendis.
-          </p>
-          <img src="../img/2.png" alt="A picture of me" />
+        <div class="rounded-square-container">
+          <div class="content-wrapper">
+            <div class="about-text">
+              <h1>I'm Hanis</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+                ipsum commodi odio magni minus maxime, nemo iste unde
+                reprehenderit aut excepturi, aliquam sequi dolor eaque quo
+                deleniti esse? Doloribus, ut.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Laudantium officia pariatur temporibus expedita voluptates
+                libero debitis amet facilis, ut rem labore, necessitatibus
+                voluptatem quaerat ea beatae ab doloribus! Voluptas, reiciendis.
+              </p>
+            </div>
+            <div class="image-container">
+              <img src="../img/2.png" alt="A picture of me" />
+            </div>
+          </div>
         </div>
       </section>
     </main>
