--- a/contact/index.html
+++ b/contact/index.html
@@ -25,6 +25,12 @@
       rel="stylesheet"
     />
 
+    <!--Fontawesome kits-->
+    <script
+      src="https://kit.fontawesome.com/4e12b69c63.js"
+      crossorigin="anonymous"
+    ></script>
+
     <meta name="theme-color" content="#fafafa" />
   </head>
 
@@ -59,9 +65,9 @@
     <!-- MAIN - CONTACT -->
     <main>
       <section class="contact">
-        <div class="content-wrapper">
-          <h1>Say hello</h1>
-          <div class="contact-info">
+        <div class="rounded-square-container">
+          <div class="content-wrapper">
+            <h1>Say hello</h1>
             <div class="info-sub" id="email-address">
               <h3>Send me an email</h3>
               <a href="mailto:hanisno@outlook.com">hanisno@outlook.com</a>
@@ -70,21 +76,31 @@
               <h3>Feel like talking?</h3>
               <a href="tel:+601165522126">+601165522126</a>
             </div>
-          </div>
-          <div class="contact-form">
-            <form action="action_page.php">
-              <!--<label for="name">Name</label>-->
-              <input type="text" id="name" placeholder="Your name" />
-              <!--<label for="email">Email</label>-->
-              <input type="email" id="email" placeholder="Your email" />
-              <!--<label for="subject">Subject</label>-->
-              <textarea
-                id="subject"
-                name="subject"
-                placeholder="Write something.."
-              ></textarea>
-              <input type="submit" value="Send" class="button" />
-            </form>
+            <!-- SOCIAL -->
+            <div class="info-sub">
+              <h3>See what I'm up to</h3>
+              <div class="social">
+                <div class="social-icons">
+                  <p>
+                    <a href="https://www.facebook.com/" target="_blank">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </p>
+                  <p>
+                    <a href="https://www.twitter.com/" target="_blank">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </p>
+                  <p>
+                    <a href="https://www.instagram.com/" target="_blank">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </p>
+                </div>
+                <!--social icons div ends -->
+              </div>
+            </div>
+            <!-- social div ends -->
           </div>
         </div>
       </section>
