Style work-detail page and update about page tablet and desktop styles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
           <div class="content-wrapper">
             <h1>Hanis</h1>
             <h2>Creating beautiful websites</h2>
-            <a href="#work" class="button">View work</a>
+            <div class="button-container">
+              <a href="#work" class="button">View work</a>
+            </div>
           </div>
         </div>
       </section>
@@ -127,7 +129,9 @@
                 </div>
               </article>
             </a>
-            <a href="#work" class="button">View more</a>
+            <div class="button-container">
+              <a href="#work" class="button">View more</a>
+            </div>
           </div>
         </div>
       </section>
