--- a/work/index.html
+++ b/work/index.html
@@ -65,49 +65,53 @@
     <!-- MAIN - WORK -->
     <main>
       <section class="work">
-        <div class="content-wrapper">
+        <div class="wrapper-container">
           <h1>Work</h1>
-          <div class="featured-work">
-            <a href="jubilee-austen.html">
+          <div class="content-wrapper">
+            <a href="work/jubilee-austen.html">
               <article>
-                <img src="../img/rect.png" alt="desc" />
-                <div class="project-text">
+                <img src="../img/template.png" alt="desc" />
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Voluptatem laborum iusto totam consectetur molestias
+                    aspernatur id possimus nesciunt facilis, rerum dignissimos
+                    sint officiis deserunt magnam. Facilis totam quo eum dolor!
                   </p>
                 </div>
               </article>
             </a>
-
-            <a href="jubilee-austen.html">
-              <article>
-                <img src="../img/rect.png" alt="desc" />
-                <div class="project-text">
+            <a href="work/jubilee-austen.html">
+              <article id="article-b">
+                <img src="../img/template.png" alt="desc" />
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Facere illo in quod, consequatur unde sit? Sint deserunt
+                    exercitationem quaerat inventore, architecto in, fugiat,
+                    autem perferendis sapiente iure nulla vero veritatis.
                   </p>
                 </div>
               </article>
             </a>
-
-            <a href="jubilee-austen.html">
+            <a href="work/jubilee-austen.html">
               <article>
-                <img src="../img/rect.png" alt="desc" />
-                <div class="project-text">
+                <img src="../img/template.png" alt="desc" />
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Provident commodi consectetur quam aperiam vero sit impedit
+                    quia? Ea corrupti, dolores aut dicta nihil dolorem
+                    explicabo, odit officiis praesentium omnis voluptate.
                   </p>
                 </div>
               </article>
@@ -116,6 +120,7 @@
         </div>
       </section>
     </main>
+    >
 
     <!-- FOOTER -->
     <footer>
