--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>About - Hanis</title>
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="About Hanis Noor, a front-end web designer and developer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="manifest" href="site.webmanifest" />
