--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Hanis</title>
-    <meta name="description" content="Web designer and developer" />
+    <meta
+      name="description"
+      content="Portfolio of Hanis Noor, a front-end web designer and developer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="manifest" href="site.webmanifest" />
@@ -12,7 +15,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
 
-    <!-- Icon library to show a hamburger menu (bars) on small screens -->
+    <!-- Icon library to show a hamburger menu on small screens -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -55,7 +58,7 @@
           </ul>
         </nav>
       </div>
-      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+      <!-- "Hamburger menu" / "Bar icon" to toggle the NAVIGATION LINKS -->
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
