--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Contact - Hanis</title>
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="How to contact Hanis Noor, a front-end web designer and developer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="manifest" href="site.webmanifest" />
