--- a/about/index.html
+++ b/about/index.html
@@ -42,21 +42,24 @@
 
     <!-- HEADER - ABOUT -->
     <header>
-      <div class="content-wrapper-header">
-        <!-- NAVIGATION LINKS hidden by default-->
-        <nav id="links">
+      <div id="menu-container">
+        <div id="menu-toggle">
+          <div>
+            <span id="menu-span"></span>
+            <span id="menu-span"></span>
+            <span id="menu-span"></span>
+          </div>
+        </div>
+        <nav id="menu-content">
           <ul>
-            <li><a href="../contact/index.html" target="_blank">Contact</a></li>
-            <li><a href="../work/index.html">Work</a></li>
-            <li><a href="#about" target="_blank">About</a></li>
-            <li><a href="#" target="_blank">Resume</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Resume</a></li>
           </ul>
         </nav>
+        <div id="menu-bg"></div>
       </div>
-      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
     </header>
 
     <!-- MAIN - ABOUT -->
