Add initial svg blobs at hero section of main page

--- a/index.html
+++ b/index.html
@@ -71,17 +71,25 @@
     <main>
       <!-- HERO -->
       <section class="hero">
-        <div class="wrapper-container">
-          <div class="content-wrapper">
-            <h1>Hanis</h1>
-            <h2>Creating beautiful websites</h2>
-            <div class="button-container">
-              <a href="#work" class="button">View work</a>
-            </div>
+        <div class="content-wrapper">
+          <h1>Hanis</h1>
+          <h2>Creating beautiful websites</h2>
+          <div class="button-container">
+            <a href="#work" class="button">View work</a>
           </div>
         </div>
       </section>
+      <!-- SVG START -->
+      <img src="img/left-top.svg" alt="" class="svg-lt" />
+      <img src="img/left-bottom.svg" alt="" class="svg-lb" />
+      <img src="img/left-mid.svg" alt="" class="svg-lm" />
+      <!--right svg-->
+      <img src="img/right-mid.svg" alt="" class="svg-rm" />
+      <img src="img/right-top.svg" alt="" class="svg-rt" />
+      <img src="img/right-bottom.svg" alt="" class="svg-rb" />
+      <!--speck svg -->
 
+      <!-- SVG ENDS -->
       <!-- WORK -->
       <section class="work">
         <div class="wrapper-container">
