Add specks svg at hero section and waves svg at footer

--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
       <img src="img/right-top.svg" alt="" class="svg-rt" />
       <img src="img/right-bottom.svg" alt="" class="svg-rb" />
       <!--speck svg -->
-
+      <img src="img/e6.svg" alt="" class="svg-e6" />
+      <img src="img/e7.svg" alt="" class="svg-e7" />
+      <img src="img/e9.svg" alt="" class="svg-e9" />
+      <img src="img/e10.svg" alt="" class="svg-e10" />
       <!-- SVG ENDS -->
       <!-- WORK -->
       <section class="work">
@@ -254,6 +257,7 @@
         <p>Made with love by <a href="./">Hanis</a> 2020</p>
       </div>
     </footer>
+    <img src="img/waves-footer.svg" alt="" class="svg-waves" />
 
     <!-- SCRIPTS -->
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
